# Celestia

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
src/celestia/: __init__.py  backend_client.py  server.py  target_classifier.py
src/celestia/tools/: __init__.py  abort_calibration.py  get_calibration_status.py  get_current_orientation.py  get_telescope_status.py  list_visible_objects.py  manual_slew.py  point_to.py
