[tool.poetry]
name = "celestia"
version = "0.1.0"
description = "MCP server for CAPIBARA telescope control system"
authors = ["Yashraj"]
readme = "README.md"
packages = [{ include = "celestia", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
mcp = "^1.0.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
celestia = "celestia.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
