[project]
name = "celestia"
version = "0.1.0"
description = "MCP server for CAPIBARA telescope control system"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]
 
[project.scripts]
celestia = "celestia.server:main"
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatch.build.targets.wheel]
packages = ["src/celestia"]
